crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_inline_image_part.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "messages": [
    {
      "content": [
        {
          "text": "what is this?",
          "type": "text"
        },
        {
          "image_url": {
            "url": "data:image/png;base64,AAAA"
          },
          "type": "image_url"
        }
      ],
      "role": "user"
    }
  ],
  "model": "prod-fast",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
