crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_litellm_extras.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&model.config_for_test(), &user(\"hi\"))"
---
{
  "fallbacks": [
    "backup-a",
    "backup-b"
  ],
  "guardrails": [
    "pii-check"
  ],
  "messages": [
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "metadata": {
    "tags": [
      "team:research"
    ],
    "trace_id": "t-123"
  },
  "model": "prod-fast",
  "num_retries": 2,
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
