crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_sampling_settings.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "max_tokens": 512,
  "messages": [
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "prod-fast",
  "stream": true,
  "stream_options": {
    "include_usage": true
  },
  "temperature": 0.699999988079071,
  "top_p": 0.8999999761581421
}
