crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_structured_output_json_schema.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "messages": [
    {
      "content": "give me json",
      "role": "user"
    }
  ],
  "model": "prod-fast",
  "response_format": {
    "json_schema": {
      "name": "Answer",
      "schema": {
        "additionalProperties": false,
        "properties": {
          "answer": {
            "type": "string"
          }
        },
        "required": [
          "answer"
        ],
        "type": "object"
      },
      "strict": true
    },
    "type": "json_schema"
  },
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
