crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_system_prompt.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "messages": [
    {
      "content": "You are terse.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "prod-fast",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
