crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_tool_call_and_result.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "messages": [
    {
      "content": "weather?",
      "role": "user"
    },
    {
      "content": null,
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{\"city\":\"Berlin\"}",
            "name": "get_weather"
          },
          "id": "call_1",
          "type": "function"
        }
      ]
    },
    {
      "content": "18C",
      "role": "tool",
      "tool_call_id": "call_1"
    }
  ],
  "model": "prod-fast",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
