crates/paigasus-helikon-providers-litellm/src/translate/snapshots/paigasus_helikon_providers_litellm__translate__tests__snap_tool_choice_named.snap
---
source: crates/paigasus-helikon-providers-litellm/src/translate/mod.rs
expression: "build_request(&cfg(), &r)"
---
{
  "messages": [
    {
      "content": "weather?",
      "role": "user"
    }
  ],
  "model": "prod-fast",
  "stream": true,
  "stream_options": {
    "include_usage": true
  },
  "tool_choice": {
    "function": {
      "name": "get_weather"
    },
    "type": "function"
  },
  "tools": [
    {
      "function": {
        "description": "Look up weather",
        "name": "get_weather",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            }
          },
          "required": [
            "city"
          ],
          "type": "object"
        }
      },
      "type": "function"
    }
  ]
}
